@@ -1,3 +1,7 @@
+2019-07-12  Alexandre Oliva <oliva@adacore.com>
+
+	* gcc.dg/gimplefe-43.c: New.
+
 2019-07-12  Richard Biener  <rguenther@suse.de>
 
 	* gcc.dg/tree-ssa/vector-7.c: New testcase.
